--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
+        <!-- Unicode: Codificação dos caracteres utilizados -->
         <meta charset="UTF-8">
-        <meta name="keywords" content="HTML, CSS, JavaScript, Alura, Portifolio">
+
+        <!-- Configuração para o Edge: Utilizar versão mais recente para o navegador -->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+        <!-- Detalhes do projeto: Autor e descrição na web -->
         <meta name="author" content="Gabriel Eringer de Oliveira">
-        <meta name="description" content="Página web realizada via curso 'HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags'.">
+        <meta name="description" content="Página web realizada via curso 'HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags'">
+        
+        <!-- Definindo palavras chaves para pesquisa na web -->
+        <meta name="keywords" content="HTML, CSS, JavaScript, Alura, Portifolio">
+        
+        <!-- Responsividade com viewport: Criando escala da nossa pagina -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!--* Icone da aba -->
         <link rel="icon" href="./html.png">
+
+        <!--* Titulo da aba -->
         <title>Portifolio</title>
+
     </head>
     <body>
-        <h1>Isso é um título</h1>
-        <!-- <h2>Isso é um subtítulo</h2> -->
-        <p>Isso é um parágrafo interessante</p>
-        <img src="./html.png" alt="Logo do HTML5" >
+        <!-- TODO: CABEÇALHO -->
+        <header></header>
+
+        <!-- TODO: CONTEÚDO PRINCIPAL-->
+        <main></main>
+
+        <!-- TODO: RODAPÉ -->
+        <footer></footer>
+
     </body>
 </html>
