Adcionando TODOS ao main + titulo da pagina.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
         <!-- TODO: CABEÇALHO -->
         <header></header>
 
-        <!-- TODO: CONTEÚDO PRINCIPAL-->
-        <main></main>
+        <!-- CONTEÚDO PRINCIPAL-->
+        <main>
+            <!-- Titulo -->
+            <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
+            <!-- TODO: Paragrafo -->
+            <!-- TODO: Botões -->
+            <!-- TODO: Imagem -->
+        </main>
 
         <!-- TODO: RODAPÉ -->
         <footer></footer>
