--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <main>
             <!-- Titulo -->
             <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
-            <!-- TODO: Paragrafo -->
+            
+            <!-- Paragrafo -->
+            <p>Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            
             <!-- TODO: Botões -->
             <!-- TODO: Imagem -->
         </main>
