Adcionando âncoras de redes sociais.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <!-- Paragrafo -->
             <p>Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             
-            <!-- TODO: Botões -->
+            <!-- "Botões" / Âncoras -->
+            <a href="https://www.instagram.com/gabs.eringer">Instagram</a>
+            <a href="https://github.com/GEdO23">Github</a>
+
             <!-- TODO: Imagem -->
         </main>
 
