--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <a href="https://github.com/GEdO23">Github</a>
 
             <!-- TODO: Imagem -->
+            <img src="./foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" height="350">
         </main>
 
         <!-- TODO: RODAPÉ -->
