--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <a href="https://www.instagram.com/gabs.eringer">Instagram</a>
             <a href="https://github.com/GEdO23">Github</a>
 
-            <!-- TODO: Imagem -->
+            <!-- Imagem -->
+            <img src="./foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" height="350">
         </main>
 
         <!-- TODO: RODAPÉ -->
