--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 
         <!--* Icone da aba -->
         <link rel="icon" href="./html.png">
+        
+        <!--* CSS -->
+        <link rel="stylesheet" href="./style.css">
 
-        <!--* Titulo da aba -->
+        <!-- Titulo da aba -->
         <title>Portifolio</title>
 
     </head>
@@ -28,7 +31,7 @@
         <!-- TODO: CABEÇALHO -->
         <header></header>
 
-        <!-- CONTEÚDO PRINCIPAL-->
+        <!--* CONTEÚDO PRINCIPAL-->
         <main>
             <!-- Titulo -->
             <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
