--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <!--* CONTEÚDO PRINCIPAL-->
         <main>
             <!-- Titulo -->
-            <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
+            <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
             
             <!-- Paragrafo -->
-            <p>Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em <strong>React, HTML e CSS.</strong>Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p>Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             
             <!-- "Botões" / Âncoras -->
             <a href="https://www.instagram.com/gabs.eringer">Instagram</a>
