--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
         <!--* CONTEÚDO PRINCIPAL-->
         <main class="apresentacao">
-            <section>
+            <section class="apresentacao__conteudo">
                 <!-- Titulo -->
-                <h1>Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+                <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
                 
                 <!-- Paragrafo -->
-                <p>Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+                <p class="apresentacao__conteudo__texto">Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                 
                 <!-- "Botões" / Âncoras -->
                 <a href="https://www.instagram.com/gabs.eringer">Instagram</a>
