Estilizando os links como botões.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
                 <p class="apresentacao__conteudo__texto">Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                 
                 <!-- "Botões" / Âncoras -->
-                <a href="https://www.instagram.com/gabs.eringer">Instagram</a>
-                <a href="https://github.com/GEdO23">Github</a>
+                <div class="apresentacao__links">
+                    <a class="apresentacao__links__link" href="https://www.instagram.com/gabs.eringer">Instagram</a>
+                    <a class="apresentacao__links__link" href="https://github.com/GEdO23">Github</a>
+                </div>
 
             </section>
 
