Adcionando subtitulo para os links + atualizando altura da foto de perfil.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 
                 <!-- "Botões" / Âncoras -->
                 <div class="apresentacao__links">
+                    <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                     <a class="apresentacao__links__link" href="https://www.instagram.com/gabs.eringer">Instagram</a>
                     <a class="apresentacao__links__link" href="https://github.com/GEdO23">Github</a>
                 </div>
@@ -49,7 +50,7 @@
             </section>
 
             <!-- Imagem -->
-            <img src="./foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" height="350">
+            <img src="./foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" height="550px">
         </main>
 
         <!-- TODO: RODAPÉ -->
