Novo link para linkedin.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                 <!-- "Botões" / Âncoras -->
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                    <a class="apresentacao__links__link" href="https://www.instagram.com/gabs.eringer">Instagram</a>
                     <a class="apresentacao__links__link" href="https://github.com/GEdO23">Github</a>
+                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/gabriel-eringer-de-oliveira-0ba641246/">Linkedin</a>
+                    <a class="apresentacao__links__link" href="https://www.instagram.com/gabs.eringer">Instagram</a>
                 </div>
 
             </section>
