Criando /assets para imagens + adcionando icones para os links.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--* Icone da aba -->
-        <link rel="icon" href="./html.png">
+        <link rel="icon" href="./assets/html.png">
         
         <!--* CSS -->
         <link rel="stylesheet" href="./style.css">
@@ -43,15 +43,24 @@
                 <!-- "Botões" / Âncoras -->
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                    <a class="apresentacao__links__link" href="https://github.com/GEdO23">Github</a>
-                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/gabriel-eringer-de-oliveira-0ba641246/">Linkedin</a>
-                    <a class="apresentacao__links__link" href="https://www.instagram.com/gabs.eringer">Instagram</a>
+                    <a class="apresentacao__links__link" href="https://github.com/GEdO23">
+                        <img src="./assets/icon-github.svg" alt="Icone Github" height="36px">
+                        Github
+                    </a>
+                    <a class="apresentacao__links__link" href="https://www.linkedin.com/in/gabriel-eringer-de-oliveira-0ba641246/">
+                        <img src="./assets/icon-linkedin.svg" alt="Icone Linkedin" height="36px">
+                        Linkedin
+                    </a>
+                    <a class="apresentacao__links__link" href="https://www.instagram.com/gabs.eringer">
+                        <img src="./assets/icon-instagram.svg" alt="Icone Instagram" height="36px">
+                        Instagram
+                    </a>
                 </div>
 
             </section>
 
             <!-- Imagem -->
-            <img src="./foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" height="550px">
+            <img src="./assets/foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" height="550px">
         </main>
 
         <!-- TODO: RODAPÉ -->
