--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
                 
                 <!-- Paragrafo -->
-                <p class="apresentacao__conteudo__texto">Olá! Sou Gabriel Eringer, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+                <p class="apresentacao__conteudo__texto">Olá! Sou <strong class="texto-destaque">Gabriel Eringer</strong>, desenvolvedor Front-end com especialidade em <strong class="texto-destaque">React, HTML e CSS.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                 
                 <!-- "Botões" / Âncoras -->
                 <div class="apresentacao__links">
@@ -60,7 +60,7 @@
             </section>
 
             <!-- Imagem -->
-            <img src="./assets/foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" height="550px">
+            <img class="apresentacao__imagem" src="./assets/foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" >
         </main>
 
         <!-- TODO: RODAPÉ -->
