movendo estilizações para arquivos separados em /style para melhor organização.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="icon" href="./assets/html.png">
         
         <!--* CSS -->
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style/style.css">
 
         <!-- Titulo da aba -->
         <title>Portifolio</title>
@@ -63,8 +63,10 @@
             <img class="apresentacao__imagem" src="./assets/foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" >
         </main>
 
-        <!-- TODO: RODAPÉ -->
-        <footer></footer>
+        <!--* RODAPÉ -->
+        <footer class="rodape">
+            <p>Desenvolvido por GEdO23 &copy;</p>
+        </footer>
 
     </body>
 </html>
