Adcionando em html, o cabecalho com classes nos links HOME e Sobre mim.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     </head>
     <body>
         <!-- TODO: CABEÇALHO -->
-        <header></header>
+        <header class="cabecalho">
+            <nav class="cabecalho__menu">
+                <a class="cabecalho__menu__link" href="/">HOME</a>
+                <a class="cabecalho__menu__link" href="/">Sobre mim</a>
+            </nav>
+        </header>
 
         <!--* CONTEÚDO PRINCIPAL-->
         <main class="apresentacao">
