Adcionando página about.html (já com o cabealho e rodape de index.html)

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     </head>
     <body>
-        <!-- TODO: CABEÇALHO -->
+        <!--* CABEÇALHO -->
         <header class="cabecalho">
             <nav class="cabecalho__menu">
-                <a class="cabecalho__menu__link" href="/">HOME</a>
-                <a class="cabecalho__menu__link" href="/">Sobre mim</a>
+                <a class="cabecalho__menu__link" href="./index.html">HOME</a>
+                <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
             </nav>
         </header>
 
