--- a/about.html
+++ b/about.html
@@ -33,7 +33,6 @@
             <nav class="cabecalho__menu">
                 <a class="cabecalho__menu__link" href="./index.html">HOME</a>
                 <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
-                <a class="cabecalho__menu__link" href="./assets.html">Assets</a>
             </nav>
         </header>
 
@@ -41,9 +40,14 @@
         <main class="apresentacao">
             <section class="apresentacao__conteudo">
                 <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-                <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+                <p class="apresentacao__conteudo__texto">
+                    Sou Gabriel Eringer de Oliveira, tenho 18 anos.
+                    Em 2023, estudei no curso de Análise e Desenvolvimento de Sistemas da faculdade FIAP, o centro de excelência mais respeitado do país.
+                </p>
 
-                <p class="apresentacao__conteudo__texto">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
+                <p class="apresentacao__conteudo__texto">
+                    Tenho grande ambição e vontade de em um futuro próximo trabalhar como um designer e desenvolvedor front-end, pois, sou apaixonado por esta área, e estive me dedicando ao máximo nela.
+                </p>
             </section>
             <!-- Imagem -->
             <img class="apresentacao__imagem" src="./assets/foto.jpg" alt="Foto de Gabriel Eringer: Homem branco de cabelo escuro e olhos claros utilizando óculos" >
